Corrections after dark mode addition.

--- a/styles-dark.css
+++ b/styles-dark.css
@@ -4,7 +4,7 @@ p, h1, h2, h3, h4, h5, h6, a {
     color: white;
 }
 p {
-    font-size: 25px;
+    font-size: 1.25rem;
     font-weight: 300;
 }
 
@@ -24,7 +24,7 @@ body{
     transition: 500ms ease-in-out;
     margin: auto;
     font-family: "Poppins";
-    background-color: #333;
+    background-color: #111;
 }
 .container {
     display: flex;
@@ -98,11 +98,11 @@ body{
     
 }
 .down:hover, #home:hover, .drpbtn:hover, .links img:hover, .project img:hover {
-    filter: invert(89%) sepia(57%) saturate(1730%) hue-rotate(359deg) brightness(109%) contrast(102%);
+    filter: invert(89%) sepia(67%) saturate(1730%) hue-rotate(359deg) brightness(109%) contrast(102%);
 }
 
 .links img:hover, .project a:hover {
-    transition: all 200ms ease-in-out;
+    transition: all 300ms ease-in-out;
     transform: scale(1.1);
 }
 .nav-bar {
@@ -119,15 +119,12 @@ body{
     margin: 10px;
     font-size: 1.5rem;
     color: #FFF;
-    transition: all 0.3s ease-out;
+    transition: all 0.5s ease-out;
 }
 
 
 /* Note : Title to change color in horizontal direction */
 .nav-bar h1:hover{
-    position: relative;
-    left: 1px;
-    bottom: 1px;
     color: #FFCC00;
 }
 
@@ -139,8 +136,10 @@ body{
 .links img{
     display: flex;
     margin: 15px; 
+    padding: 0px;
     width: 40px;
     height: 40px;
+    transition: all 200ms ease-in-out;
 }
 
 
@@ -165,11 +164,11 @@ body{
 
 
 .headings {
-    font-size: 60px;
+    font-size: 3rem;
     text-shadow: -15px 15px rgba(128,128,128, 0.2);
     font-weight: 600;
     margin-bottom: 10px;
-    transition: all 200ms ease-in-out;
+    transition: all 300ms ease-in-out;
 }
 
 .big-section:hover .headings{
@@ -180,11 +179,11 @@ body{
     display:inline-flex;
     height: 50px;
     width: 150px;
-    border: 1px groove rgb(255,255,255);
+    border: 1px groove white;
     border-radius: 5px;
     text-align: center;
     margin: 10px;
-    transition: all 400ms ease-in-out;
+    transition: all 500ms ease-in-out;
 }
 
 
@@ -207,7 +206,7 @@ ul {
 }
 
 button{
-    font-size: 30px;
+    font-size: 1.5rem;
     background: transparent;
     color: white;
     border: 2px solid #FFCC00;
@@ -240,37 +239,29 @@ button:active {
 .project {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     width: auto;
     flex: 1 1 0;
     margin: 10px;
     padding: 20px;
-    border: 1px groove white;
+    border: 1px solid white;
     text-align: center;
     border-radius: 5px;
-    transition: all 500ms ease-in-out;
-}
-.project a {
-    display: flex;
-    justify-content: center;
+    transition: all 750ms ease-in-out;
 }
 .project:hover {
-    position: relative;
-    left: 3px;
-    bottom: 3px;
-    box-shadow: -7px 7px #FFCC00;
+    border: 1px solid rgba(255, 204, 0, 1);
 }
 .tech li {
-    background-color: rgb(255,255,255, 0.3);
-    padding: 10px;
+    background-color: rgb(150,150,150, 0.5);
+    padding: 5px 10px;
     margin: 5px;
-    border: 1px groove rgb(255,255,255, 0.3);
+    border: 1px groove rgb(150,150,150, 0.5);
     border-radius: 20px;
     transition: all 500ms ease-in-out;
 }
 
 .tech li:hover {
-    background-color: rgba(150, 150, 150, 1);
+    background-color: rgba(160, 160, 160, 0.8);
 }
 
 .night {
@@ -285,6 +276,5 @@ button:active {
 
 .night:hover {
     background-color: #FFCC00;
-
 }
 
