--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ body{
     font-weight: 400;
     display: inline-block;
     margin: 10px;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     color: #000;
     transition: all 0.3s ease-out;
 }
@@ -123,9 +123,6 @@ body{
 
 /* Note : Title to change color in horizontal direction */
 .nav-bar h1:hover{
-    position: relative;
-    left: 1px;
-    bottom: 1px;
     color: #04AA6D;
 }
 
@@ -146,8 +143,8 @@ body{
 .landing, .footer {
     display: flex;
     justify-content: center;    
-    margin: 10% 10%;
-    width: auto;
+    margin: 10% 0%;
+    width: auto;    
 }
 
 .landing-text, .footer-text {
@@ -178,7 +175,7 @@ body{
     display:inline-flex;
     height: 50px;
     width: 150px;
-    border: 1px groove rgba(128,128,128,0.5);
+    border: 1px groove gray;
     border-radius: 5px;
     text-align: center;
     margin: 10px;
@@ -206,7 +203,7 @@ ul {
 
 button{
     font-size: 1.5rem;
-    background: white;
+    background: transparent;
     border: 2px solid #04AA6D;
     border-radius: 5px;
     width: auto;
@@ -241,32 +238,30 @@ button:active {
     width: auto;
     margin: 10px;
     padding: 20px;
-    border: 1px groove gray;
+    border: 1px solid black;
     text-align: center;
     border-radius: 5px;
-    transition: all 500ms ease-in-out;
+    transition: all 750ms ease-in-out;
 }
 
 .project:hover {
-    position: relative;
-    left: 3px;
-    bottom: 3px;
-    box-shadow: -7px 7px #04AA6D;
+    border: 1px solid rgba(4, 200, 109, 1);
 }
 .tech li {
-    background-color: rgba(160,160,160,0.1);
-    padding: 10px;
+    background-color: rgba(150,150,150,0.5);
+    padding: 5px 10px;
     margin: 5px;
-    border: 1px groove rgba(128,128,128,0.5);
+    border: 1px groove rgba(150,150,150,0.5);
     border-radius: 20px;
     transition: all 500ms ease-in-out;
 }
 
 .tech li:hover {
-    background-color: rgba(160, 160, 160, 0.3);
+    background-color: rgba(160, 160, 160, 0.2);
 }
 
 .night {
+    margin: auto;
     position: fixed;
     padding: 5px;
     top: 90%;
